# TPCNN

./: MulticlassCNN.pth  README.md  app.py  gradcam.py  main.py  modelizadoia_cnn.py  modelo_cnn.py  predecir.py  predict.py  pyproject.toml  requirements.txt  train.py
src/: gradcam.py  model.py
tests/: test_gradcam.py  test_model.py  test_predict.py
